# tg-playground

./: .gitignore  AGENTS.md
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  logging.py  main.py
backend/app/api/: deps.py  health.py
backend/app/temporal/: activities.py  client.py  worker.py  workflows.py
frontend/: .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: admin-layout.tsx  app-sidebar.tsx
memory/: MEMORY.md  project_overview.md
skills/backend/: new-endpoint.md  new-model.md  new-workflow.md
skills/frontend/: api-communication.md  new-component.md  new-page.md
