[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-playground-backend"
version = "0.1.0"
description = "TG Playground Backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "redis>=5.2",
    "temporalio>=1.11",
    "structlog>=25.1",
    "httpx>=0.28",
]

[project.scripts]
serve = "app.main:run"
worker = "app.temporal.worker:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
